# my_symengine_project_expand

./: .gitignore  CMakeLists.txt  footer.tex  main.cpp  template.tex
